# nlp_pipeline

./: .gitignore  README.md  output.xml  pyproject.toml
.github/workflows/: deploy-docs.yml
clj/: deps.edn
clj/resources/xslt/: inline-to-standoff.xsl
clj/src/pipeline/: nlp.clj  xslt.clj
docs/: index.html
scripts/: generate_openapi_json.py
src/nlp_pipeline/: __init__.py  base_text.py  parser.py  pipeline.py  server.py  types.py
tests/: conftest.py  test_base_text.py  test_pipeline.py  test_server.py
tests/fixtures/: tlg0011.tlg001.perseus-grc2.tokenized.xml  viaf2603144.viaf007.perseus-eng1.json
xslt/: number-annotations.xsl
