[project]
name = "nlp-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Charles Pletcher", email = "cpletcher2@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "stanza>=1.11.1",
]

[tool.fastapi]
entrypoint = "nlp_pipeline.server:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.34",
]
